--- a/Sample/App.xaml
+++ b/Sample/App.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version = "1.0" encoding = "UTF-8" ?>
-<Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<prism:PrismApplication xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:Sample"
+             xmlns:prism="http://prismlibrary.com"
              x:Class="Sample.App">
     <Application.Resources>
         <ResourceDictionary>
@@ -11,5 +11,5 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
-</Application>
+</prism:PrismApplication>
 
