--- a/Sample/Views/IndexPage.xaml
+++ b/Sample/Views/IndexPage.xaml
@@ -4,10 +4,11 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
     x:Class="Sample.Views.IndexPage">
     
-    <StackLayout>
+    <StackLayout Spacing="4">
         <Button Text="AutoTest" Command="{Binding GoToTest}"  CommandParameter="AutoTest" />
         <Button Text="ManualTest" Command="{Binding GoToTest}"  CommandParameter="ManualTest" />
         <Button Text="MainPage" Command="{Binding GoToTest}"  CommandParameter="MainPage" />
+        <Button Text="ViewModelBoot" Command="{Binding GoToTest}" CommandParameter="VmTest" />
         <Button Text="SurveyPage" Command="{Binding GoToTest}" CommandParameter="SurveyPage" />
     </StackLayout>
 </ContentPage>
