Dialog Height Limit / ShowAsync<TViewModel> renamed to ShowFromModelAsync<TViewModel>

--- a/Sample/Views/Dialogs/TestDialog.xaml
+++ b/Sample/Views/Dialogs/TestDialog.xaml
@@ -13,9 +13,16 @@
     CornerRadius="16"
     OverlayColor="#80000000"
     >
-    <StackLayout BackgroundColor="Green">
-        <Label Text="Hoge" FontSize="Medium" />
-        <Button Text="OK" Clicked="Button_Clicked" BackgroundColor="Yellow" />
-    </StackLayout>
+    <ScrollView>
+    <Grid RowDefinitions="*,30">
+        
+       
+            <Label Grid.Row="0" Text="テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト" />
+        
 
+        
+        <Button Grid.Row="1" Text="OK" Clicked="Button_Clicked" BackgroundColor="Yellow"
+                />
+    </Grid>
+    </ScrollView>
 </extra:DialogView>
