--- a/Sample/App.xaml
+++ b/Sample/App.xaml
@@ -1,7 +1,6 @@
 ﻿<?xml version = "1.0" encoding = "UTF-8" ?>
-<prism:PrismApplication xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:prism="http://prismlibrary.com"
              x:Class="Sample.App">
     <Application.Resources>
         <ResourceDictionary>
@@ -11,5 +10,5 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
-</prism:PrismApplication>
+</Application>
 
